deployment/manifest/ingress/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lifesub-web-ingress
  namespace: dg0406-lifesub-ns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: lifesub.dg0406.com  # 실제 도메인으로 변경 필요
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lifesub-web-service
            port:
              number: 80
